--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -5968,3 +5968,252 @@ div.popup-employee-reassign-tasks-tickets-selects > div
 }
 
 /***************** END - Create Correspondence Popup(s) - END *****************/
+
+/***************** START - Correspondence Ledger Popup(s) - START *****************/
+
+div.popup-correspondence-ledger,
+div.correspondence-run-ledger,
+.popup-correspondence-data,
+.popup-account-correspondence-ledger,
+.popup-correspondence-run
+{
+	margin	: 0.5em;
+}
+
+.reflex-popup div.popup-correspondence-ledger table.reflex,
+.reflex-popup div.correspondence-run-ledger table.reflex,
+.reflex-popup .correspondence-ledger-for-run table.reflex
+{
+	margin	: 0em;
+}
+
+div.popup-correspondence-ledger-validation-errors
+{
+	padding	: 0.5em;
+}
+
+div.popup-correspondence-ledger table.reflex thead th > span
+{
+	vertical-align	: middle;
+	padding-right	: 1em;
+}
+
+div.popup-correspondence-ledger table.reflex thead th > img
+{
+	vertical-align	: middle;
+	cursor			: pointer;
+}
+
+div.popup-correspondence-ledger div.section-content > table.reflex,
+div.correspondence-run-ledger div.section-content > table.reflex,
+.correspondence-ledger-for-run div.section-content > table.reflex
+{
+	margin-left		: 0em;
+	margin-right	: 0em;
+	width			: 100%;
+}
+
+div.section > div.section-header > div.section-header-title > span.pagination-info
+{
+	padding-left	: 0.5em;
+	font-size		: 0.95em;
+}
+
+div.datetime-time
+{
+	font-size	: 0.8em;
+}
+
+.popup-correspondence-ledger td.actions
+{
+	text-align	: right;
+}
+
+.popup-correspondence-ledger td.actions > img
+{
+	cursor	: pointer;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row
+{
+	text-align	: left;
+	cursor		: pointer;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row:hover
+{
+	color	: #001499;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row > span
+{
+	vertical-align	: middle;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row > img
+{
+	vertical-align	: middle;
+	padding-right	: 0.25em;
+	display			: none;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row.open
+{
+	padding-bottom	: 0.5em;
+}
+
+.popup-correspondence-ledger table.reflex .batch-row.open > img
+{
+	display	: inline-block;
+}
+
+.popup-correspondence-ledger .run-count
+{
+	float	: right;
+}
+
+.popup-correspondence-ledger td.no-rows,
+.popup-correspondence-ledger .loading,
+.correspondence-run-ledger .loading,
+.correspondence-ledger-for-run .loading
+{
+	padding		: 0.25em;
+	font-style	: italic;
+	opacity		: 0.75;
+}
+
+.popup-correspondence-ledger .loading,
+.correspondence-run-ledger .loading,
+.correspondence-ledger-for-run .loading
+{
+	float	: left;
+	padding	: 0.25em 0em 0em 0.5em;
+}
+
+.popup-correspondence-ledger .filter-fields
+{
+	margin	: 0.1em 0em 0em 0em;
+}
+
+.popup-correspondence-ledger .filter-fields > li
+{
+	padding-left	: 0.5em;
+}
+
+.popup-correspondence-ledger .filter-fields .control-field
+{
+	display	: inline-block;
+}
+
+
+.correspondence-run-ledger table.reflex thead th > span,
+.correspondence-ledger-for-run table.reflex thead th > span
+{
+	vertical-align	: middle;
+}
+
+.correspondence-run-ledger table.reflex thead tr:nth-child(2) > th,
+.correspondence-ledger-for-run table.reflex thead tr:nth-child(2) > th
+{
+	background-color	: #666;	
+}
+
+.correspondence-run-ledger table.reflex thead th > img,
+.correspondence-ledger-for-run table.reflex thead th > img
+{
+	vertical-align	: middle;
+	cursor			: pointer;
+}
+
+.correspondence-run-ledger table.reflex thead th.filter-heading,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading
+{
+	font-style	: italic;
+	font-size	: 0.85em;
+}
+
+.correspondence-run-ledger table.reflex thead th.header > span,
+.correspondence-ledger-for-run table.reflex thead th.header > span
+{
+	padding-right	: 0.25em;
+}
+
+.correspondence-run-ledger table.reflex thead th.header > img.header-filter,
+.correspondence-ledger-for-run table.reflex thead th.header > img.header-filter
+{
+	float	: right;
+}
+
+.correspondence-run-ledger table.reflex thead th.filter-heading > img,
+.correspondence-run-ledger table.reflex thead th.filter-heading > span,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading > img,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading > span
+{
+	vertical-align	: middle;
+}
+
+.correspondence-run-ledger table.reflex thead th.filter-heading > span,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading > span
+{
+	margin-left		: 0.25em;
+	padding-right	: 0.5em;
+}
+
+.correspondence-run-ledger table.reflex thead th.filter-heading > div,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading > div
+{
+	display			: inline-block;
+	vertical-align	: middle;
+}
+
+.correspondence-run-ledger table.reflex thead th.filter-heading > div > img,
+.correspondence-ledger-for-run table.reflex thead th.filter-heading > div > img
+{
+	padding-left	: 0.25em;
+	width			: 1.25em;
+	height			: 1.25em;
+	cursor			: pointer;
+}
+
+.correspondence-run-ledger th.header > img,
+.correspondence-ledger-for-run th.header > img
+{
+	padding-right	: 0.5em;
+}
+
+.correspondence-run-ledger span.header-sort,
+.correspondence-ledger-for-run span.header-sort
+{
+	cursor	: pointer;
+}
+
+.correspondence-run-ledger ul.actions,
+.correspondence-ledger-for-run ul.actions
+{
+	margin	: 0em;
+}
+
+.popup-correspondence-data .section-content
+{
+	max-height	: 35em;
+	overflow	: auto;
+}
+
+.popup-correspondence-data table.reflex
+{
+	margin	: 0em !important;
+	border	: none !important;
+}
+
+.popup-correspondence-data table.reflex th
+{
+	width	: 13em;
+}
+
+.popup-account-correspondence-ledger .buttons,
+.popup-correspondence-run .buttons
+{
+	text-align	: center;
+}
+
+/***************** END - Correspondence Ledger Popup(s) - END *****************/
