--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -5930,17 +5930,17 @@ div.popup-employee-reassign-tasks-tickets-selects > div
 
 /***************** START - Commit All Interim First Invoices Popup - START *****************/
 
-.popup-interim-first-invoice-commit-all
+.popup-first-interim-invoice-commit-and-send
 {
-	padding	: 0em 0.5em 0.5em 0.5em;
+	margin	: 0.5em;
 }
 
-.popup-interim-first-invoice-commit-all .control-field select
+.popup-first-interim-invoice-commit-and-send .control-field select
 {
 	width	: 100%;
 }
 
-.popup-interim-first-invoice-commit-all .buttons
+.popup-first-interim-invoice-commit-and-send .buttons
 {
 	text-align	: center;
 }
@@ -5950,6 +5950,33 @@ div.popup-employee-reassign-tasks-tickets-selects > div
 	width	: 59em;
 	margin	: 0.5em;
 	height	: 30em;
+}
+
+.popup-first-interim-invoice-commit-and-send .billing-section
+{
+	border-style		: solid;
+	border-width		: 0.1em 0.1em 0.1em 0.1em;
+	border-color		: #1C1C1C;
+	background-color	: #DDDDDD;
+	color				: #333333;
+	padding				: 0.5em;
+}
+
+.popup-first-interim-invoice-commit-and-send table.reflex
+{
+	margin	: 0em !important;
+}
+
+.popup-first-interim-invoice-commit-and-send div.section
+{
+	padding-bottom	: 0.5em;
+}
+
+.popup-first-interim-invoice-commit-and-send .no-rows
+{
+	padding		: 0.25em;
+	font-style	: italic;
+	opacity		: 0.75;
 }
 
 /***************** END - Commit All Interim First Invoices Popup - END *****************/
@@ -6107,6 +6134,23 @@ div.datetime-time
 {
 	text-align	: left;
 	cursor		: pointer;
+}
+
+.popup-correspondence-ledger .batch-table th,
+.popup-correspondence-ledger .batch-table td
+{
+	width	: 30%;
+}
+
+.popup-correspondence-ledger .batch-table-container
+{
+	max-height	: 20em;
+	overflow	: auto;
+}
+
+.popup-correspondence-ledger .batch-table table
+{
+	width	: 100% !important;
 }
 
 .popup-correspondence-ledger table.reflex .batch-row:hover
@@ -6337,6 +6381,16 @@ div.datetime-time
 .correspondence-item-total
 {
 	font-weight	: bold;
+}
+
+.component-correspondence-run-details > div.section-content > table > tbody > tr > td
+{
+	width	: 30%;
+}
+
+.component-correspondence-run-details > div.section-content > table > tbody > tr > th
+{
+	width	: 20%; 
 }
 
 /***************** END - Correspondence Ledger Popup(s) - END *****************/
