--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -7041,6 +7041,25 @@ div.popup-email-text-edit
 	left: 0;
 }
 
+.email-subject-container
+{
+	display: inline-block;
+	padding-left: 110px;
+}
+
+.email-subject-label
+{
+	padding-left: 3px;
+	font-size	: 1.0em;
+	font-weight	: bold;
+}
+
+.email-subject-input
+{
+
+	margin-left: 5px;
+}
+
 /************- END - Email Editor Popup - END - **********************************/
 
 /************************ - Popup Email Template Select - *******************************/
@@ -7193,7 +7212,10 @@ div.popup-email-templates table.reflex {
 	background: white;
 	border-style:solid;
 	border-width:1px;
-	font-family:Arial,Verdana,Helvetica;
+	font-family:sans-serif;
+	max-height: 30em; 
+	overflow: auto;
+
 
 }
 .popup-email-html-preview .buttons
