--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -6478,24 +6478,60 @@ div.datetime-time
 	display: inline-block;
 }
 
-.correspondence-run-ledger tbody tr td:nth-child(1),
-.correspondence-run-ledger tbody tr td:nth-child(5),
-.correspondence-run-ledger tbody tr td:nth-child(6),
-.correspondence-run-ledger tbody tr td:nth-child(8)
+.popup-correspondence-run-ledger-normal .correspondence-run-ledger tbody tr td:nth-child(1)
+{
+	width	: 7em;
+}
+
+.popup-correspondence-run-ledger-normal .correspondence-run-ledger tbody tr td:nth-child(6)
+{
+	width	: 8em;
+}
+
+.popup-correspondence-run-ledger-normal .correspondence-run-ledger tbody tr td:nth-child(5),
+.popup-correspondence-run-ledger-normal .correspondence-run-ledger tbody tr td:nth-child(8)
 {
 	width	: 6em;
 }
 
-.correspondence-run-ledger tbody tr td:nth-child(2)
+.popup-correspondence-run-ledger-normal .correspondence-run-ledger tbody tr td:nth-child(2)
+{
+	width	: 8em;
+}
+
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(3),
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(4),
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(7)
+{
+	width	: 18em;
+}
+
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(1)
+{
+	width	: 7em;
+}
+
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(6)
+{
+	width	: 8em;
+}
+
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(5),
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(8)
+{
+	width	: 6em;
+}
+
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(2)
 {
 	width	: 15em;
 }
 
-.correspondence-run-ledger tbody tr td:nth-child(3),
-.correspondence-run-ledger tbody tr td:nth-child(4),
-.correspondence-run-ledger tbody tr td:nth-child(7)
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(3),
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(4),
+.popup-correspondence-run-ledger-large .correspondence-run-ledger tbody tr td:nth-child(7)
 {
-	width	: 20em;
+	width	: 18em;
 }
 
 /***************** END - Correspondence Ledger Popup(s) - END *****************/
