--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -676,6 +676,12 @@ div.reflex-popup > div.reflex-popup-content > div#GroupedContent
 	background-color	: inherit;
 }
 
+div.reflex-popup .popup-debug-text
+{
+	width	: 59em;
+	margin	: 0.5em;
+	height	: 30em;
+}
 
 /************************ END - Reflex Popup - END ****************************/
 
@@ -6007,13 +6013,6 @@ div.popup-employee-reassign-tasks-tickets-selects > div
 .popup-first-interim-invoice-commit-and-send .buttons
 {
 	text-align	: center;
-}
-
-.log-text
-{
-	width	: 59em;
-	margin	: 0.5em;
-	height	: 30em;
 }
 
 .popup-first-interim-invoice-commit-and-send .billing-section
