--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -7425,5 +7425,56 @@ div.email-template-enddate-message span
 
 }
 
+div.popup-email-test .recipient
+{
+	--padding-top: 10px;
+	--padding-left: 20px;
+	--padding-bottom: 5px;
+}
+
+
+div.popup-email-test .recipient input
+{
+	border-width: 1px;
+    border-style: solid;
+    border-color: #999999;
+    
+    font-family: sans-serif;
+    font-size: 12px;
+    color: #333333;
+    width: 250px;
+    height: 15px;
+
+}
+
+
+div.recipient table.input tbody tr th
+{
+	text-align			: right;
+	padding-right		: 0.5em;
+	width: 0em;
+	vertical-align		: top;
+}
+
+div.popup-email-test
+{
+	padding: 5px;
+
+}
+
+div.popup-email-test .cancel-button
+{
+
+	padding-left: 150px;
+
+}
+
+div.popup-email-test .send-button
+{
+
+	padding-left: 3px;
+
+}
+
 
 
