--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -7301,6 +7301,7 @@ div.popup-email-templates table.reflex {
 .popup-email-html-preview
 {
 	padding: 15px;
+	height: 500px;
 
 }
 
@@ -7310,14 +7311,18 @@ div.popup-email-templates table.reflex {
 	border-style:solid;
 	border-width:1px;
 	font-family:sans-serif;
-	max-height: 30em; 
+	max-height: 50em; 
 	overflow: auto;
+	width: 100%;
+	height: 90%;
+	
 
 
 }
 .popup-email-html-preview .buttons
 {
 	 text-align: center;
+	 margin-top: 10px;
 }
 
 
@@ -7438,23 +7443,37 @@ div.popup-email-test .recipient input
 	border-width: 1px;
     border-style: solid;
     border-color: #999999;
-    
+   
     font-family: sans-serif;
     font-size: 12px;
     color: #333333;
-    width: 250px;
-    height: 15px;
+    width: 80% !important;
+    height: 17px;
 
 }
 
-
-div.recipient table.input tbody tr th
+.add-icon
 {
-	text-align			: right;
-	padding-right		: 0.5em;
-	width: 0em;
-	vertical-align		: top;
+ cursor:pointer; 
+ vertical-align: text-top;
+
+ padding-top: 4px;
+ padding-left: 1px;
+
 }
+
+.remove-icon
+{
+ cursor:pointer; 
+ vertical-align: text-top;
+
+ padding-top: 1px;
+ padding-left: 1px;
+
+}
+
+
+
 
 div.popup-email-test
 {
@@ -7465,7 +7484,7 @@ div.popup-email-test
 div.popup-email-test .cancel-button
 {
 
-	padding-left: 150px;
+	padding-left: 250px;
 
 }
 
@@ -7473,6 +7492,43 @@ div.popup-email-test .send-button
 {
 
 	padding-left: 3px;
+
+}
+
+div.email-template-error
+{
+	padding: 15px;
+	text-align: center;
+
+}
+
+div.email-template-error>div.details-link
+{
+	cursor: pointer;
+	padding: 3px;
+	color: blue;
+	text-decoration:underline;
+	
+
+}
+
+div.email-template-error>div.error-details
+{
+	background : white;
+	border:1px solid black;
+}
+
+.popup-email-html-save
+{
+	padding: 15px;
+	
+
+}
+
+div.popup-email-test div.control-field
+{
+	display: inline;
+	
 
 }
 
