--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -7182,7 +7182,7 @@ div.popup-email-text-edit
 	-moz-border-radius: 4px 4px 4px 4px;
 	border: 1px solid #000000;
 	
-	background-image:url('../img/template/background-blur.png');
+	background-color: rgba(255, 255, 255, 0.6);
 	
 }
 
